--- a/app/src/main/res/layout/activity_shopping.xml
+++ b/app/src/main/res/layout/activity_shopping.xml
@@ -6,6 +6,8 @@
 <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/shopping_main_pager"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
-    <!--android:layout_margin="@dimen/activity_horizontal_margin"-->
+    android:layout_height="match_parent"
+    android:padding="@dimen/enough_room_for_card_shadow"/>
+    <!--android:layout_margin="0dp"-->
+
 
