--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,5 @@
     <dimen name="card_elevation">8dp</dimen>
     <dimen name="contact_text_size">18sp</dimen>
     <dimen name="card_padding">8dp</dimen>
-
+    <dimen name="enough_room_for_card_shadow">5dp</dimen>
 </resources>
