--- a/app/src/main/res/menu/menu_shopping.xml
+++ b/app/src/main/res/menu/menu_shopping.xml
@@ -1,6 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".ShoppingActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_checkout" android:title="@string/action_checkout"
+        android:icon="@drawable/ic_shopping_cart_white_24dp"
+        android:orderInCategory="100" app:showAsAction="always" />
 </menu>
