--- a/app/src/main/res/layout/cart_summary_item.xml
+++ b/app/src/main/res/layout/cart_summary_item.xml
@@ -32,7 +32,8 @@
             android:id="@+id/tvBookTotalPrice"
             android:layout_weight=".2"
             android:layout_alignParentRight="true"
-            android:width="60sp" />
+            android:width="60sp"
+            android:gravity="right"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
