Book Card layout redesign

--- a/app/src/main/res/layout/activity_shopping.xml
+++ b/app/src/main/res/layout/activity_shopping.xml
@@ -4,7 +4,7 @@
     android:id="@+id/shopping_main_pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/enough_room_for_card_shadow"/>
+    android:padding="0dp"/>
 
 
 
