--- a/app/src/main/res/layout/book_card_layout.xml
+++ b/app/src/main/res/layout/book_card_layout.xml
@@ -6,16 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     card_view:elevation="@dimen/card_elevation"
-    card_view:cardCornerRadius="@dimen/card_corner_radius"
-    android:layout_margin="8dp"
+    card_view:cardCornerRadius="0dp"
+    android:layout_margin="0dp"
 
     >
 
-    <View
-        android:id="@+id/vPalette"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        />
+
 
     <LinearLayout
         android:orientation="vertical"
@@ -31,26 +27,68 @@
             android:scaleType="fitCenter"
             />
 
+        <View
+            android:id="@+id/vPalette"
+            android:layout_height="5dp"
+            android:layout_width="match_parent"
+            android:layout_marginTop="1dp"
+            />
+
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_gravity="center">
+            android:layout_gravity="fill_horizontal"
+            android:orientation="horizontal"
+            android:weightSum="1">
 
-            <Button
-                android:id="@+id/minus_button"
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.85">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="The title of the book"
+                    android:id="@+id/tvBookTitle"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_gravity="left" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Quantity in basket : 0"
+                    android:layout_gravity="left"
+                    android:id="@+id/counter" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="-"/>
-            <TextView
-                android:id="@+id/counter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <Button
-                android:id="@+id/plus_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="+"/>
+                android:layout_gravity="right"
+                android:layout_weight="0.15">
+
+                <Button
+                    android:id="@+id/plus_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.5"
+                    android:text="+"/>
+
+                <Button
+                    android:id="@+id/minus_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.5"
+                    android:text="-"/>
+            </LinearLayout>
+
         </LinearLayout>
+
     </LinearLayout>
 </android.support.v7.widget.CardView>
