--- a/app/src/main/res/layout/book_card_layout.xml
+++ b/app/src/main/res/layout/book_card_layout.xml
@@ -10,8 +10,6 @@
     android:layout_margin="0dp"
     >
 
-
-
     <LinearLayout
         android:orientation="vertical"
         android:layout_margin="@dimen/card_padding"
@@ -21,7 +19,7 @@
         <ImageView
             android:id="@+id/book_card_image"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="10"
             android:scaleType="centerInside"
             />
@@ -33,76 +31,87 @@
             android:layout_marginTop="1dp"
             />
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_height="0dp"
             android:layout_gravity="fill_horizontal|bottom"
             android:orientation="horizontal"
-            android:weightSum="1">
+            android:weightSum="1"
+            android:layout_weight="2">
 
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="bottom"
-                android:layout_weight="0.85">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="The title of the book"
-                    android:id="@+id/tvBookTitle"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:layout_gravity="left" />
 
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="The title of the book"
+                android:id="@+id/tvBookTitle"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_gravity="left"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_toStartOf="@+id/linearLayout"
+                android:layout_toLeftOf="@+id/linearLayout" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="@string/book_price_placeholder"
-                        android:id="@+id/tvBookPrice"
-                        android:layout_gravity="right" />
-                </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/book_price_placeholder"
+                android:id="@+id/tvBookPrice"
+                android:layout_gravity="right"
+                android:textStyle="bold"
+                android:layout_alignBaseline="@+id/counter"
+                android:layout_alignBottom="@+id/counter"
+                android:layout_toLeftOf="@+id/linearLayout"
+                android:layout_toStartOf="@+id/linearLayout" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Quantity in basket : 0"
-                    android:layout_gravity="left"
-                    android:id="@+id/counter" />
 
-            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Quantity in basket : 0"
+                android:layout_gravity="left"
+                android:id="@+id/counter"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_weight="0.15">
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:id="@+id/linearLayout">
 
                 <Button
                     android:id="@+id/plus_button"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
-                    android:text="+"/>
+                    android:text="+"
+                    android:layout_gravity="right"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true" />
 
                 <Button
                     android:id="@+id/minus_button"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="0.5"
-                    android:text="-"/>
+                    android:text="-"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_gravity="right" />
+
             </LinearLayout>
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
